# make-it-rain

./: Cargo.toml  README.md  mir.1
src/: colors.rs  main.rs  matrix.rs
